Added Run/Debug configuration in README.